tests/NormalTests/paczka2/big_fuzzy/82917366.err
Error in line 4: A821 A973 0,4
Error in line 5: A821 A821 5,9
Error in line 14: A821 A973 88,8
Error in line 20: A821 S746 89,1
Error in line 21: 5rpQE1lP4 S746 69,5
Error in line 26: 3UwJFnAzAe0 S746 2,8
Error in line 28: 3UwJFnAzAe0 A821 43,6
Error in line 33: 3UwJFnAzAe0 A973 65,5
Error in line 32: R9P A973 54,0
Error in line 55: 3UwJFnAzAe0 S571 213,92
Error in line 45: R9P S746 6,2
Error in line 71: 5rpQE1lP4 A973 5,42
Error in line 72: R9P S746 97,8
Error in line 77: rYdkZ8vqm A821 30,7
Error in line 83: 6Z0mLJ4Fr S746 77,8
Error in line 84: rYdkZ8vqm A973 92,5
Error in line 81: 3UwJFnAzAe0 S571 21,3
Error in line 90: 5rpQE1lP4 A973 13,1
Error in line 43: A821 A973 209,0
Error in line 101: rYdkZ8vqm A973 91,7
Error in line 110: rYdkZ8vqm S571 23,72
Error in line 104: rYdkZ8vqm S746 64,1
Error in line 107: 5rpQE1lP4 A973 14,7
Error in line 124: 5rpQE1lP4 A821 -6,3
Error in line 118: ngAD6 A973 66,2
Error in line 120: rYdkZ8vqm S571 4,0
Error in line 132: rYdkZ8vqm S746 9,8
Error in line 135: 3UwJFnAzAe0 A821 66,50
Error in line 122: A821 S746 98,8
Error in line 137: 3UwJFnAzAe0 A821 213,2
Error in line 144: 3UwJFnAzAe0 A973 81,0
Error in line 149: rYdkZ8vqm A821 -4,4
Error in line 134: rYdkZ8vqm A821 60,1
Error in line 113: 5rpQE1lP4 A821 95,6
Error in line 155: ngAD6 A821 33,9
Error in line 153: A821 A821 4,9
Error in line 188: ngAD6 A821 1,7
Error in line 190: 5rpQE1lP4 A973 81,3
Error in line 189: ngAD6 S746 54,6
Error in line 198: 3UwJFnAzAe0 A973 18,9
Error in line 218: 3UwJFnAzAe0 A973 60,0
Error in line 224: 3UwJFnAzAe0 S746 91,5
Error in line 227: 6Z0mLJ4Fr S746 63,5
Error in line 232: 6Z0mLJ4Fr A973 27,6
Error in line 231: A821 A821 31,4
Error in line 239: 3UwJFnAzAe0 S571 24,4
Error in line 243: A821 A973 4,6
